# trading-bot

./: .env.example  .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
src/trading_bot/: analyst.py  backtester.py  cli.py  config.py  display.py  indicators.py  main.py  market_data.py  models.py  safety.py  signals.py  trader.py
